--- a/src/pages/Login/components/Card/Card.css
+++ b/src/pages/Login/components/Card/Card.css
@@ -19,3 +19,13 @@
   flex-direction: column;
   align-items: center;
 }
+
+.login-btn {
+  color: white;
+  font: 600 24px "Inter", serif;
+  background-color: #44b26f;
+  width: 277px;
+  height: 56px;
+  border: none;
+  cursor: pointer;
+}
