--- a/store/src/pages/Login/Login.css
+++ b/store/src/pages/Login/Login.css
@@ -1,7 +1,7 @@
-.login_page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #44b26f;
+.login-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #44b26f;
 }
