--- a/store/src/pages/Product/Product.css
+++ b/store/src/pages/Product/Product.css
@@ -16,20 +16,20 @@ html {
     max-width: 1334px;
 }
 
-.details-header {
+.details_header {
     display: flex;
     align-items: center;
     gap: 40px;
 }
 
-.go__back {
+.go-back {
     all: unset;
     cursor: pointer;
     width: 76px;
     height: 60px;
 }
 
-.go__back__arrow {
+.go-back_arrow {
     width: 76px;
     height: 60px;
 }
@@ -38,29 +38,29 @@ html {
     font: 500 32px "Inter", open-sans;
 }
 
-.details-main {
+.details_main {
     display: flex;
     padding-left: 31px;
 }
 
-.product__img {
+.product_img {
     width: 396px;
     height: 268px;
     padding-top: 55px;
 }
 
-.main-info {
+.main_info {
     padding-left: 45px;
 }
 
-.info__inStock {
+.info_in-stock {
     color: #3cd78c;
     font: 500 36px "Inter", sans;
     margin: 0;
     padding: 26px 0 0 0;
 }
 
-.info__price {
+.info_price {
     color: #fc5b00;
     padding: 26px 0 26px 0;
     font: 700 24px "Inter", sans;
@@ -68,40 +68,35 @@ html {
     margin: 0;
 }
 
-.info__quantity {
+.info_quantity {
     margin: 26px 0 26px 0;
     font: 500 24px "Inter", sans;
     padding: 0 0 26px 30px;
     margin: 0;
 }
 
-.details-description {
+.details_description {
     margin: 71px 0 0 61px;
 }
 
-.description-header {
+.description-item {
     display: flex;
-    align-items: center;
+    align-content: center;
     gap: 25px;
     margin-bottom: 48px;
 }
 
-.description-header h5 {
+.description-item h5 {
     font: 500 32px "Inter", sans;
     margin: 0;
 }
 
-.description-header p {
+.description-item p {
     color: #d9d9d9;
     font: 500 32px "Inter", sans;
-}
-
-.details-description h5 {
-    font: 700 24px "Inter", sans;
     margin: 0;
 }
 
-.details-description p {
-    margin: 0 0 30px 0;
+.description-text {
     font: 400 24px "Inter", sans;
 }
